First not too bad integration of Nilkins as the backing engine.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title>Ultra Globe</title>
   </head>
-  <body>
-    <div id="screen"></div>
+  <body style="background-color: black;">
+    <div id="screenL"></div>
+    <div id="screenR"></div>
     
     </body>
 </html>
