Cleaned active calls to ThreeJs and replaced entirely by Nilkins's API for the integration. Also pushed a new version of Nilkins.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Ultra Globe</title>
   </head>
   <body style="background-color: black;">
-    <div id="screenL"></div>
-    <div id="screenR"></div>
+    <div id="nkView"></div>
     
     </body>
 </html>
