Controller Elevation and layer system

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Ultra Globe</title>
-  </head>
-  <body>
-    <div id="screen"></div>
-    
-    </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Ultra Globe</title>
+  
+</head>
+
+<body>
+
+  
+  <div id="screen" oncontextmenu="return false;" style="position: absolute; height:100%; width:100%; left: 0px; top:0px; z-index: 0;">
+    <img id="elevation" src="./elevation.png" style="position: absolute; width: 80px; height: 80px; right: 1%; top:3%; float:right; z-index: 1000;">
+  </div>
+  
+  
+</body>
+
 </html>
