Added basic controller logic, made fixes here and there to improve behaviour.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ultra Globe</title>
   </head>
   <body style="background-color: black;">
-    <div id="nkView"></div>
+    <div id="nkView" oncontextmenu="return false;"></div>
     
     </body>
 </html>
