--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <title>Ultra Globe</title>
-  
+  <style>
+    body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      font-size: 0;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="screen" oncontextmenu="return false;" style="position: absolute; height:100%; width:100%; left: 0px; top:0px; z-index: 0;">
-    <img id="elevation" src="./elevation.png" style="position: absolute; width: 80px; height: 80px; right: 1%; top:3%; float:right; z-index: 1000;">
+  <div id="screen" oncontextmenu="return false;">
   </div>
 </body>
 
