view dimension based on div rather than screen

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 
 <body>
-  <div id="screen" oncontextmenu="return false;"></div>
+  <div id="screen" oncontextmenu="return false;" style="position:absolute;width:100%; height:100%;"></div>
 
   <a class="outlinedText" style="left:5%;bottom: 5%;" href="https://www.gebco.net/data_and_products/gebco_web_services/web_map_service/">GEBCO WMS</a>
 
