--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       margin: 0;
       width: 100%;
       height: 100%;
-      font-size: 0;
       touch-action: none;
     }
 
@@ -37,7 +36,7 @@
       text-transform: uppercase;
       letter-spacing: 3px;
       -webkit-text-fill-color: rgb(255, 255, 255);
-      -webkit-text-stroke: 1px;
+      -webkit-text-fill-color: rgb(255, 255, 255);
     }
 
     .dropbtn {
@@ -87,9 +86,7 @@
 <body>
   <div id="screen" oncontextmenu="return false;" style="position:absolute;width:100%; height:100%;"></div>
 
-  <a class="outlinedText" style="left:5%;bottom: 5%;" href="https://www.gebco.net/data_and_products/gebco_web_services/web_map_service/">GEBCO WMS</a>
-
-
+  
   <div class="outlinedText" style="left:0%;bottom: 100px; width:100%;pointer-events: none;">
     Map controls: Left-click pan | Right-click rotation | Mouse-wheel zoom
   </div>
