--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
 
 <body>
   <div id="screen" oncontextmenu="return false;" style="position:absolute;width:100%; height:100%;"></div>
-
+  <script>
+    document.getElementById('screen').addEventListener('wheel', function(event) {
+      event.preventDefault();
+    }, { passive: false });
+  </script>
   
-  <div class="outlinedText" style="left:0%;bottom: 100px; width:100%;pointer-events: none;">
+  <!--<div class="outlinedText" style="left:0%;bottom: 100px; width:100%;pointer-events: none;">
     Map controls: Left-click pan | Right-click rotation | Mouse-wheel zoom
-  </div>
+  </div>-->
 
 
 </body>
