--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
       -webkit-text-fill-color: rgb(255, 255, 255);
     }
 
+    .outlinedText2 {
+      position: absolute;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      text-align: center;
+      font-weight: bold;
+      color: rgb(0, 0, 0);
+      font-size: 14px;
+      padding: 15px 0;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      -webkit-text-fill-color: rgb(255, 255, 255);
+      -webkit-text-fill-color: rgb(255, 255, 255);
+    }
+
     .dropbtn {
       background-color: #cab854;
       color: white;
@@ -80,20 +97,39 @@
     .dropdown:hover .dropbtn {
       background-color: #ac9d48;
     }
-
-    
+    .unselectable {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera, and Safari */
+}
   </style>
 </head>
 
 <body>
   <div id="screen" oncontextmenu="return false;" style="position:absolute;width:100%; height:100%;"></div>
+  <div
+    id="website" class="outlinedText2" class="unselectable" style="position: absolute;bottom: 60px; left:25px; z-index: 99;font-size: 16px;font-family: 'Orbitron', sans-serif;letter-spacing: 0.3em;cursor: pointer;"
+    >
+    <img src="https://storage.googleapis.com/jdultra-website/assets/iconSmall.png" class="unselectable" width="14px" height="14px"><span class="unselectable">
+      JDULTRA</span>
+  </div>
+  <div
+    id="help" class="outlinedText2" class="unselectable" style="position: absolute;bottom: 5px; right:25px; z-index: 99;font-size: 16px;font-family: 'Orbitron', sans-serif;letter-spacing: 0.3em;"
+    >
+    <span class="unselectable">Pan: Left click | Rotate: Right click | Zoom: mouse wheel</span>
+  </div>
   <script>
-    document.getElementById('screen').addEventListener('wheel', function(event) {
+    document.getElementById('screen').addEventListener('wheel', function (event) {
       event.preventDefault();
     }, { passive: false });
+
+    document.getElementById('website').addEventListener('click', function() {
+  window.location.href = 'http://www.jdultra.com';
+});
   </script>
-  
- 
+
+
   
 </body>
 
