performance mobile + clouds improvements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
   <title>Ultra Globe</title>
   <style>
     body {
@@ -142,7 +142,7 @@
       height="14px"><span class="unselectable">
       JDULTRA</span>
   </div>
-  <div class="progress-container">
+  <div class="progress-container" style="visibility: hidden;">
     <div id="progressBar" class="progress-bar">0%</div>
 </div>
   <div id="help" class="outlinedText2" class="unselectable"
