--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
   <div id="screen" oncontextmenu="return false;" style="position:absolute;width:100%; height:100%;"></div>
   <div id="website" class="outlinedText2" class="unselectable"
-    style="position: absolute;bottom: 60px; left:25px; z-index: 99;font-size: 16px;font-family: 'Orbitron', sans-serif;letter-spacing: 0.3em;cursor: pointer;">
+    style="position: absolute;top: 20px; left:25px; z-index: 99;font-size: 16px;font-family: 'Orbitron', sans-serif;letter-spacing: 0.3em;cursor: pointer;">
     <img src="https://storage.googleapis.com/jdultra-website/assets/iconSmall.png" class="unselectable" width="14px"
       height="14px"><span class="unselectable">
       JDULTRA</span>
@@ -145,10 +145,10 @@
   <div class="progress-container" style="visibility: hidden;">
     <div id="progressBar" class="progress-bar">0%</div>
 </div>
-  <div id="help" class="outlinedText2" class="unselectable"
+  <!-- <div id="help" class="outlinedText2" class="unselectable"
     style="position: absolute;bottom: 5px; right:25px; z-index: 99;font-size: 16px;font-family: 'Orbitron', sans-serif;letter-spacing: 0.3em;">
     <span class="unselectable">Pan: Left click | Rotate: Right click | Zoom: mouse wheel</span>
-  </div>
+  </div> -->
   <script>
     document.getElementById('screen').addEventListener('wheel', function (event) {
       event.preventDefault();
