--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </script>
 
 <video id="video" style="display:none" autoplay muted playsinline></video>
-
+<script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
